tests/baselines/reference/jsdocImportTypeReferenceToStringLiteral.errors.txt
a.js(2,5): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"foo"'.


==== b.js (0 errors) ====
    export const FOO = "foo";
    
==== a.js (1 errors) ====
    /** @type {import('./b').FOO} */
    let x;
        ~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"foo"'.
    